# gRPC-tutorial

./: .gitignore  README.md  code_generator.py  pyproject.toml  requirements.txt  sample_pb2_grpc.py
client/: sample_client.py  sample_pb2.py
devops/docker/: docker-compose.yml
devops/docker/zebra1/: Dockerfile
devops/nginx/zebra1/: zebra1.conf
model/: sample_mnist.py
protobuf/: sample.proto  sample_pb2_grpc.py  zebra.proto  zebra1.proto  zebra1_pb2.py  zebra1_pb2_grpc.py  zebra2.proto  zebra2_pb2.py  zebra2_pb2_grpc.py  zebra_pb2.py  zebra_pb2_grpc.py
server/: flask_app.py  sample_pb2_grpc.py  sample_server.py  zebra1_server.py  zebra2_server.py
