[tool.poetry]
name = "grpc-tutorial"
version = "0.1.0"
description = ""
authors = ["Yeojin Kim <yeojin.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
grpcio-tools = "^1.28.1"
flask = "^1.1.2"
tensorflow = "^2.1.0"
tensorflow-serving-api = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
